# llm_fundamentals

./: .gitignore  create_custom_tokenizer.ipynb  pyproject.toml
.gradio/flagged/: dataset1.csv
my_qa_tokenizer/: merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
my_tokenizer/: merges.txt  tokenizer.json  vocab.json
notebooks/: create_custom_tokenizer.ipynb  fine_tuning.ipynb  fine_tuning_llama_3_2_1B.ipynb  knowledge_distillation.ipynb  knowledge_distillation_cnn.ipynb
