[project]
name = "llm-fundamentals"
version = "0.1.0"
description = "LLM fundamental concepts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "huggingface-hub>=0.32.4",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "transformers>=4.52.4",
]
