[project]
name = "llm-fundamentals"
version = "0.1.0"
description = "LLM fundamental concepts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "gradio>=5.33.0",
    "huggingface-hub>=0.32.4",
    "llama-cpp-python>=0.3.9",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "pandas>=2.3.0",
    "protobuf>=6.31.1",
    "python-dotenv>=1.1.0",
    "torch<2.7",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.52.4",
]
